--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
     const URL_SERVICE=`?name="AD"&pass="123"`;
     const URL=GoogleScriptUrl+URL_SERVICE;
 
-    fetch (URL)
+
+    try {
+        fetch (URL)
         .then (res => res.json())
         .then (data => {
             console.log(data);
             console.log(JSON.stringify(data));
     });
+    }  catch (error) {
+        console.error('Fetch', error);
+    }
+
+    
 </script>
 </html>
