--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     const URL_SERVICE=`?name="AD"&pass="123"`;
     const URL=GoogleScriptUrl+URL_SERVICE;
 
-    fetch (URL)
+    fetch (URL, {
+            redirect: "follow",
+            method: "POST",
+            mode: 'cors',
+            headers: {           
+            "Content-Type": "text/plain;charset=utf-8",
+            }
+        })
         .then (res => res.json())
         .then (data => {
             console.log(data);
