--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     fetch (URL, {
             redirect: "follow",
-            method: "POST",
+            method: "GET",
             mode: 'cors',
             headers: {           
             "Content-Type": "text/plain;charset=utf-8",
