--- a/index.html
+++ b/index.html
@@ -9,23 +9,50 @@
     
 </body>
 <script>
-    const GoogleScriptUrl=`https://script.google.com/macros/s/AKfycbzvZVdGLwwUNX6si8HdsRCeeKoZ-vjwqafn4m0XR22UKbEBxmRZ6QmRrChDj0q2otPkEA/exec`;
+    const GoogleScriptUrl=`https://script.google.com/macros/s/AKfycbwtMM3fpGDQT6hysqG5oSBM3xKdIyUxccXFeqbNcMHdzRWMQ8xLs9RgJP8UkWyQFCuUvw/exec`;
 
     const URL_SERVICE=`?name="AD"&pass="123"`;
     const URL=GoogleScriptUrl+URL_SERVICE;
 
-    fetch (URL, {
-            redirect: "follow",
-            method: "GET",
-            mode: 'cors',
-            headers: {           
-            "Content-Type": "text/plain;charset=utf-8",
-            }
-        })
-        .then (res => res.json())
-        .then (data => {
-            console.log(data);
-            console.log(JSON.stringify(data));
-    });
+    // fetch (URL, {
+    //         redirect: "follow",
+    //         method: "GET",
+    //         mode: 'cors',
+    //         headers: {           
+    //         "Content-Type": "text/plain;charset=utf-8",
+    //         }
+    //     })
+    //     .then (res => res.json())
+    //     .then (data => {
+    //         console.log(data);
+    //         console.log(JSON.stringify(data));
+    // });
+
+    async function sendLoginData(username, password) {
+  // Hash the password using SHA-256
+  const encoder = new TextEncoder();
+  const data = encoder.encode(password);
+  const hashedPassword = await crypto.subtle.digest('SHA-256', data);
+  const hashArray = Array.from(new Uint8Array(hashedPassword)); // Convert buffer to byte array
+  const hashHex = hashArray.map(byte => byte.toString(16).padStart(2, '0')).join(''); // Convert bytes to hex string
+  console.log(hashHex);
+  // Send the hashed password and username to Google Apps Script
+  const response = await fetch(URL, {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+    },
+    body: JSON.stringify({
+      username: username,
+      password: hashHex  // Send the hashed password
+    }),
+  });
+
+  const result = await response.json();
+  console.log(result);
+}
+
+sendLoginData('123','ABC');
+console.log('sen!');
 </script>
 </html>
