--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cors testing</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
 </head>
 <body>
     
@@ -28,14 +30,28 @@
     //         console.log(JSON.stringify(data));
     // });
 
-    async function sendLoginData(username, password) {
-  // Hash the password using SHA-256
-  const encoder = new TextEncoder();
-  const data = encoder.encode(password);
-  const hashedPassword = await crypto.subtle.digest('SHA-256', data);
-  const hashArray = Array.from(new Uint8Array(hashedPassword)); // Convert buffer to byte array
-  const hashHex = hashArray.map(byte => byte.toString(16).padStart(2, '0')).join(''); // Convert bytes to hex string
-  console.log(hashHex);
+
+async function hashPassword(password) {
+  // Check if crypto.subtle is available (modern browsers)
+  if (window.crypto && crypto.subtle) {
+    // Hash using the Web Crypto API
+    const encoder = new TextEncoder();
+    const data = encoder.encode(password);
+    const hashedPassword = await crypto.subtle.digest('SHA-256', data);
+    const hashArray = Array.from(new Uint8Array(hashedPassword));
+    return hashArray.map(byte => byte.toString(16).padStart(2, '0')).join('');
+  } else {
+    // Fallback: Use CryptoJS for older browsers
+    const hashedPassword = CryptoJS.SHA256(password).toString(CryptoJS.enc.Hex);
+    console.log(hashedPassword);
+    return hashedPassword;
+  }
+}
+
+async function sendLoginData(username, password) {
+  // Hash the password
+  const hashedPassword = await hashPassword(password);
+
   // Send the hashed password and username to Google Apps Script
   const response = await fetch(URL, {
     method: 'POST',
@@ -44,7 +60,7 @@
     },
     body: JSON.stringify({
       username: username,
-      password: hashHex  // Send the hashed password
+      password: hashedPassword // Send the hashed password
     }),
   });
 
