--- a/index.html
+++ b/index.html
@@ -31,41 +31,33 @@
     // });
 
 
-async function hashPassword(password) {
-  // Check if crypto.subtle is available (modern browsers)
-  if (window.crypto && crypto.subtle) {
-    // Hash using the Web Crypto API
-    const encoder = new TextEncoder();
-    const data = encoder.encode(password);
-    const hashedPassword = await crypto.subtle.digest('SHA-256', data);
-    const hashArray = Array.from(new Uint8Array(hashedPassword));
-    return hashArray.map(byte => byte.toString(16).padStart(2, '0')).join('');
-  } else {
-    // Fallback: Use CryptoJS for older browsers
-    const hashedPassword = CryptoJS.SHA256(password).toString(CryptoJS.enc.Hex);
-    console.log(hashedPassword);
-    return hashedPassword;
-  }
-}
-
-async function sendLoginData(username, password) {
+    async function sendLoginData(username, password) {
   // Hash the password
+  try {
   const hashedPassword = await hashPassword(password);
 
   // Send the hashed password and username to Google Apps Script
   const response = await fetch(URL, {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
+    method: 'POST',   
     body: JSON.stringify({
       username: username,
       password: hashedPassword // Send the hashed password
     }),
   });
 
+  if (!response.ok) {
+    throw new Error(`Network response was not ok: ${response.statusText}`);
+  }
+  try {
   const result = await response.json();
   console.log(result);
+  } catch (err) {
+    //console.error('Error 1 is that:', err);   
+  }
+
+  } catch (error) {
+     console.error('Error 2 is that:', error);   
+  }
 }
 
 sendLoginData('123','ABC');
