--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
     //         console.log(JSON.stringify(data));
     // });
 
+    
+async function hashPassword(password) {
+  // Check if crypto.subtle is available (modern browsers)
+  if (window.crypto && crypto.subtle) {
+    // Hash using the Web Crypto API
+    const encoder = new TextEncoder();
+    const data = encoder.encode(password);
+    const hashedPassword = await crypto.subtle.digest('SHA-256', data);
+    const hashArray = Array.from(new Uint8Array(hashedPassword));
+    return hashArray.map(byte => byte.toString(16).padStart(2, '0')).join('');
+  } else {
+    // Fallback: Use CryptoJS for older browsers
+    const hashedPassword = CryptoJS.SHA256(password).toString(CryptoJS.enc.Hex);
+    console.log(hashedPassword);
+    return hashedPassword;
+  }
+}
 
     async function sendLoginData(username, password) {
   // Hash the password
