--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ async function hashPassword(password) {
     const data = encoder.encode(password);
     const hashedPassword = await crypto.subtle.digest('SHA-256', data);
     const hashArray = Array.from(new Uint8Array(hashedPassword));
-    return hashArray.map(byte => byte.toString(16).padStart(2, '0')).join('');
+    let result = hashArray.map(byte => byte.toString(16).padStart(2, '0')).join('');
+    console.log(`result`, result);
+    return result;
   } else {
     // Fallback: Use CryptoJS for older browsers
     const hashedPassword = CryptoJS.SHA256(password).toString(CryptoJS.enc.Hex);
